# ghost-env

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
docs/: README.md  api-reference.md  getting-started.md  presets.md  python.md  testing-and-chaos.md
python/: README.md  pyproject.toml
python/src/ghost_env/: __init__.py  eval_runner.py  export.py  ghost_env.py  presets.py  recorder.py  replay.py  seed.py  world.py
python/src/stubfetch/: __init__.py  eval_runner.py  export.py  ghost_env.py  presets.py  replay.py
python/tests/: test_env.py
src/: chaos.ts  ghost-env.test.ts  ghost-env.ts  index.ts  replay.ts
src/eval/: runner.ts
src/providers/: anthropic.ts  github.ts  openai.ts  postgres.ts  s3.ts  slack.ts  stripe.ts
src/recording/: export.ts  recorder.ts
src/world/: seed.ts  state.ts
