[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stubfetch"
version = "0.1.0"
description = "Deterministic fake APIs for AI agent tests"
readme = { file = "../README.md", content-type = "text/markdown" }
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "slaps.dev" }]
keywords = [
  "ai",
  "agents",
  "testing",
  "mock",
  "http",
  "fetch",
  "github",
  "stripe",
  "openai",
  "anthropic",
  "deterministic",
  "e2e",
  "integration-testing",
]

[project.urls]
Homepage = "https://slaps.dev/stubfetch"
Documentation = "https://slaps.dev/docs/stubfetch/"
Repository = "https://github.com/vgulerianb/stubfetch"
"Bug Tracker" = "https://github.com/vgulerianb/stubfetch/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/stubfetch"]

[tool.hatch.build.targets.sdist]
include = ["src/stubfetch", "../README.md", "../LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
